# music-emotion-probing-interactive

./: .gitignore  README.md  config.yaml  mock_physiological_input.csv  predict_server.py  project.md  pyproject.toml  requirements.txt  run_experiment.py  saved_probe_model.joblib  test_predict.py  visualize_results.py
data/HKU956/: 2. original_song_audio.csv  3. AV_ratings.csv  4. participant_personality.csv  README
data/HKU956/1. physiological_signals/hku1903/BVP/: 0_262957.csv  10_645874.csv  11_959968.csv  12_1119022.csv  13_312686.csv  14_523360.csv  15_1077690.csv  16_1119018.csv  17_975624.csv  18_28197.csv  19_1167541.csv  1_1071844.csv  20_950932.csv  21_958343.csv  22_414342.csv  23_1125420.csv  24_905173.csv  25_905175.csv  26_1220730.csv  27_140531.csv  28_925790.csv  29_1063450.csv  2_1094515.csv  30_1028450.csv  3_519565.csv  4_1130631.csv  5_1167225.csv  6_187045.csv  7_1083659.csv  8_262957.csv  9_737755.csv
data/HKU956/1. physiological_signals/hku1903/EDA/: 0_262957.csv  10_645874.csv  11_959968.csv  12_1119022.csv  13_312686.csv  14_523360.csv  15_1077690.csv  16_1119018.csv  17_975624.csv  18_28197.csv  19_1167541.csv  1_1071844.csv  20_950932.csv  21_958343.csv  (+17 more)
frontend/: package-lock.json  package.json  postcss.config.cjs
frontend/src/: App.jsx
frontend/src/components/: EmotionVisualizer.jsx  UploadPanel.jsx
src/: config.py  visualization.py
src/data/: explore_dataset.py  hku956_dataset.py
src/experiments/: emotion_probing.py
src/models/: timesfm_extractor.py
venv310/: pyvenv.cfg
venv310/Scripts/: activate  activate.bat
(+4696 files in other folders)
